# project-aion

./: .gitignore  CONTRIBUTING.md  README.md  main.py  pyproject.toml
aion/: config.py  loader.py  runner.py  yaml_loader.py
aion/api/: __init__.py  app.py  dependencies.py  schemas.py  settings.py  state.py
aion/api/routers/: health.py  runs.py  suites.py
aion/cli/: app.py
aion/domain/: models.py
aion/executor/: agent.py  http_executor.py
aion/providers/: factory.py
aion/storage/: run_store.py
docs/: concept.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ErrorAlert.tsx  LoadingSpinner.tsx  NewSuiteModal.tsx  PageHeader.tsx  ProbeChip.tsx  RunsTable.tsx  ScenarioList.tsx  StatusBadge.tsx  SuiteCard.tsx
frontend/src/hooks/: useRuns.ts
frontend/src/pages/: RunDetail.tsx  RunsPage.tsx  SuiteDetail.tsx  SuiteList.tsx
tests/: test_config.py  test_domain.py  test_executor.py  test_factory.py  test_http_executor.py  test_loader.py  test_run_store.py  test_runner.py  test_yaml_loader.py
tests/api/: conftest.py  test_health.py  test_runs.py  test_suites.py
tests/cli/: test_app.py
