[project]
name = "project-aion"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "agno[aws,openai]>=2.5.17",
    "anthropic>=0.96.0",
    "fastapi>=0.136.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "uvicorn[standard]>=0.44.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.20.1",
    "ruff>=0.15.11",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pydantic>=2.13.3",
    "pytest-mock>=3.15.1",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "D",    # pydocstyle
]
ignore = [
    "D100", # missing docstring in public module (module-level ok to omit)
    "D104", # missing docstring in public package
    "D107", # missing docstring in __init__
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D101", "D102", "D103"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["aion"]

[tool.mypy]
python_version = "3.14"
strict = true
pretty = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=aion --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["aion"]
omit = ["tests/*"]
